[package]
name = "simulate"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.37"
clap = { version = "4.5.4", features = ["derive"] }
csv = "1.3.0"
indicatif = "0.17.8"
itertools = "0.12.1"
leptos = { version = "0.6.9", features = ["csr", "nightly"] }
ndarray = "0.15.6"
ndarray-npy = "0.8.1"
ndhistogram = "0.9.0"
rand = "0.8.5"
rand_distr = "0.4.3"
reqwest = "0.12.2"
rstest = "0.18.2"
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.114"
